force-app/main/default/objects/SAJ_Release_Component_Environment__c/SAJ_Release_Component_Environment__c.object-meta.xml
<CustomObject>
    <description>Junction object between Release Environment and Release Component</description>
    <label>Release Component Environment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Release Component Environment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Release Component Environments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>