force-app/main/default/objects/SAJ_Release_Component_Environment__c/fields/SAJ_Deployment_Id__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Deployment_Id__c</fullName>
    <label>Deployment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>