force-app/main/default/objects/SAJ_Release_Component_Environment__c/fields/SAJ_Deployment_Status__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Deployment_Status__c</fullName>
    <description>Status of the release component during deployment</description>
    <label>Deployment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>