force-app/main/default/objects/SAJ_Release_Component_Environment__c/fields/SAJ_Exception__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Exception__c</fullName>
    <description>Attribute to store any exceptions that occurred during deploying the release component</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Exception</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>