force-app/main/default/objects/SAJ_Release_Component_Environment__c/fields/SAJ_Release_Component__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Release_Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the release component</description>
    <label>Release Component</label>
    <referenceTo>SAJ_Release_Component__c</referenceTo>
    <relationshipLabel>Release Component Environments</relationshipLabel>
    <relationshipName>Release_Component_Environments</relationshipName>
    <type>Lookup</type>
</CustomField>