force-app/main/default/objects/SAJ_Release_Component_Environment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SAJ_Deployment_Status__c</columns>
    <columns>SAJ_Release_Environment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>